do280/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: j2c-app
  name: j2c-app
spec:
  port:
    targetPort: 80-80
  to:
    kind: ""
    name: j2c-app
    weight: null
status: {}
